force-app/main/default/objects/Legal_Entity__c/fields/Available_for_Internal_Project__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Internal_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available for Internal Project on Opportunity, Only Internal opportunity Record Type should select these Legal Entities</description>
    <inlineHelpText>Available for Internal Opportunities Only</inlineHelpText>
    <label>Available for Internal Project</label>
    <type>Checkbox</type>
</CustomField>