force-app/main/default/objects/Legal_Entity__c/fields/Available_for_Project__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this legal entity is available in Opportunity or Engagement</description>
    <inlineHelpText>Indicates if this legal entity is available in Opportunity or Engagement</inlineHelpText>
    <label>Available for Project</label>
    <type>Checkbox</type>
</CustomField>