force-app/main/default/objects/Legal_Entity__c/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <description>The business unit of the entity in ERP</description>
    <label>ERP Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>