force-app/main/default/objects/Legal_Entity__c/fields/ERP_Business_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit_Id__c</fullName>
    <description>Record Id of the business unit in ERP</description>
    <label>ERP Business Unit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>