force-app/main/default/objects/Legal_Entity__c/fields/ERP_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Entity_Code__c</fullName>
    <description>The code of the legal entity in ERP</description>
    <label>ERP Entity Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>