force-app/main/default/objects/Legal_Entity__c/fields/ERP_Event_Type_Template_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Event_Type_Template_Number__c</fullName>
    <description>Template number of the event type in ERP</description>
    <label>ERP Event Type Template Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>