force-app/main/default/objects/Legal_Entity__c/fields/ERP_Ledger_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ledger_Name__c</fullName>
    <description>The name of the ledger in ERP this entity belongs to</description>
    <label>ERP Ledger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>