force-app/main/default/objects/Legal_Entity__c/fields/ERP_Legal_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity_Id__c</fullName>
    <description>Record id of the legal entity in ERP</description>
    <label>ERP Legal Entity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>