force-app/main/default/objects/Legal_Entity__c/fields/ERP_Legislation_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legislation_Code__c</fullName>
    <description>The legislation code of the entity in ERP</description>
    <label>ERP Legislation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>