force-app/main/default/objects/Legal_Entity__c/fields/ERP_Opportunity_Type_Template_number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Opportunity_Type_Template_number__c</fullName>
    <description>Template number of the opportunity type in ERP</description>
    <label>ERP Opportunity Type Template number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>