force-app/main/default/objects/Legal_Entity__c/fields/ERP_VAT_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_VAT_Legal_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field value  set to True and used for VAT Treatment on Opportunity and Engagement.</description>
    <inlineHelpText>ERP VAT Treatment Legal Entity</inlineHelpText>
    <label>ERP VAT Treatment</label>
    <type>Checkbox</type>
</CustomField>