force-app/main/default/objects/Legal_Entity__c/fields/Legacy_HL_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legacy_HL_Entity__c</fullName>
    <description>Legacy HL Entity names used on Opportunity and Engagement.</description>
    <inlineHelpText>Legacy HL Entity name</inlineHelpText>
    <label>Legacy HL Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>