force-app/main/default/objects/Legal_Entity__c/listViews/All_Legal_Entities.listView-meta.xml
<ListView>
    <fullName>All_Legal_Entities</fullName>
    <columns>OBJECT_ID</columns>
    <columns>ERP_Entity_Code__c</columns>
    <columns>Legacy_HL_Entity__c</columns>
    <columns>NAME</columns>
    <columns>Legacy_JDE_Company__c</columns>
    <columns>ERP_Business_Unit__c</columns>
    <columns>ERP_Business_Unit_Id__c</columns>
    <columns>ERP_Legal_Entity_Id__c</columns>
    <columns>ERP_Opportunity_Type_Template_number__c</columns>
    <columns>ERP_VAT_Legal_Entity__c</columns>
    <columns>Available_for_Project__c</columns>
    <columns>ERP_Legislation_Code__c</columns>
    <columns>ERP_Event_Type_Template_Number__c</columns>
    <columns>ERP_Ledger_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Legal Entities</label>
</ListView>